@@ -189,7 +189,7 @@ TESTS = run-arextract.sh run-arsymtest.sh run-ar.sh newfile test-nlist \
 	leb128 read_unaligned \
 	msg_tst system-elf-libelf-test \
 	$(asm_TESTS) run-disasm-bpf.sh run-low_high_pc-dw-form-indirect.sh \
-	run-readelf-dw-form-indirect.sh
+	run-readelf-dw-form-indirect.sh run-strip-largealign.sh
 
 if !BIARCH
 export ELFUTILS_DISABLE_BIARCH = 1
@@ -511,7 +511,8 @@ EXTRA_DIST = run-arextract.sh run-arsymtest.sh run-ar.sh \
 	     testfile_pt_gnu_prop.bz2 testfile_pt_gnu_prop32.bz2 \
 	     run-getphdrnum.sh testfile-phdrs.elf.bz2 \
 	     run-test-includes.sh run-low_high_pc-dw-form-indirect.sh \
-	     run-readelf-dw-form-indirect.sh testfile-dw-form-indirect.bz2
+	     run-readelf-dw-form-indirect.sh testfile-dw-form-indirect.bz2 \
+	     testfile-largealign.bz2 run-strip-largealign.sh
 
 
 if USE_VALGRIND
