@@ -1,7 +1,15 @@
+2021-06-09  Andrei Homescu  <ah@immunant.com>
+
+	* testfile-largealign.o.bz2: New test file.
+	* run-strip-largealign.sh: New test.
+	* Makefile.am (TESTS): Add run-strip-largealign.sh.
+	(EXTRA_DIST): Add run-strip-largealign.sh and
+	testfile-largealign.o.bz2
+
 2021-07-02  Mark Wielaard  <mark@klomp.org>
 
-       * run-debuginfo-find.sh: unset VALGRIND_CMD before testing debuginfod
-       client cache.
+	* run-debuginfo-find.sh: unset VALGRIND_CMD before testing debuginfod
+	client cache.
 
 2021-06-16  Frank Ch. Eigler <fche@redhat.com>
 
