@@ -1,3 +1,8 @@
+2021-06-09  Andrei Homescu  <ah@immunant.com>
+
+	* elf_getdata.c: Fix d_align for sections where alignment is larger
+	than offset.
+
 2020-12-12  Mark Wielaard  <mark@klomp.org>
 
 	* elf.h: Update from glibc.
